2008-02-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/include/motorola/mc68230.h: Prefix defines with
	  MC68230_ to avoid preprocessor clashes.

2008-02-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1277/networking
	* libnetworking/netinet/in_cksum_i386.h: Use q instead of r in
	constraint for assembly language. This restricts the register choice
	to the a-d registers.

2008-02-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/Makefile.am: Remove these. They were proposed but never
	standardized.
	* posix/src/pthreadgetcputime.c, posix/src/pthreadsetcputime.c: Removed.

2007-12-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/sync.c: Make sync() POSIX-compliant.
	* libcsupport/src/__gettod.c: Make gettimeofday() POSIX-compliant.

2007-12-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1268/cpukit
	* libcsupport/include/rtems/assoc.h,
	rtems/src/semtranslatereturncode.c: There is no
	rtems_assoc_ptr_by_value method.

2007-12-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Revert Joel's 2007-06-13 NDEBUG patch.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/pheapallocatealigned.c, score/src/pheapgetblocksize.c:
	Reverse file contents.

2007-12-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* httpd/Makefile.am, httpd/preinstall.am,
	rtems/src/semtranslatereturncode.c: rtems_webserver.h must be
	installed. It is the initialization interface for both GoAhead and
	Simple HTTPD.

2007-12-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove score/cpu/avr/Makefile, 
	score/cpu/nios2/Makefile, score/cpu/avr/Makefile.
	* score/cpu/Makefile.am: Remove avr, nios2, c4x.

2007-12-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* score/cpu/nios2, score/cpu/c4x, score/cpu/avr: Remove from
	  rtems-4-8-branch.

2007-11-27	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* posix/src/prwlocktimedrdlock.c, posix/src/prwlocktimedwrlock.c,
	rtems/include/rtems/rtems/barrier.h,